first Html code

--- a/index.html
+++ b/index.html
@@ -6,5 +6,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maria Rios Navarro</title>
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <h1>Maria Rios Navarro Portfolio</h1>
+      <figure>
+        <img src="/img/MariaCodingCracy.png" alt="Maria Code" />
+        <figcaption>Me everyday, when i code</figcaption>
+      </figure>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="">Bio</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Kontakt</a></li>
+      </ul>
+    </nav>
+    <main id="">
+      <section id="bio">
+        <h2>Biographie Maria Rios Navarro</h2>
+        <p></p>
+      </section>
+
+      <section id="projects">
+        <h2>Projecte</h2>
+        <ul>
+          <li>
+            <a href="" target="_blank">Git HuB</a>
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
+                <img src="img1.jpg" style="width: 100%" />
+                <div class="text">Caption Text</div>
+              </div>
+
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img src="img2.jpg" style="width: 100%" />
+                <div class="text">Caption Two</div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <a href="" target="_blank">Codepen</a>
+            <div class="slideshow-container">
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 2</div>
+                <img src="img1.jpg" style="width: 100%" />
+                <div class="text">Caption Text</div>
+              </div>
+
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 2</div>
+                <img src="img2.jpg" style="width: 100%" />
+                <div class="text">Caption Two</div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>
+      <section id="skills">
+        <h3>Skills</h3>
+        <ul>
+          <li>Html</li>
+          <li>Css</li>
+          <li>Javascript</li>
+          <li>React</li>
+        </ul>
+      </section>
+    </main>
+
+    <footer>
+      <h3>Contact</h3>
+      <ul>
+        <li>Email</li>
+        <li>Telefon</li>
+        <li>Linkedin</li>
+      </ul>
+    </footer>
+  </body>
 </html>
