--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header id="header">
       <h1>Maria Rios Navarro Portfolio</h1>
       <figure>
-        <img src="/img/MariaCodingCracy.png" alt="Maria Code" />
+        <img src="/img/MariaCodingCracy.png" alt="Maria Code" height="300px" />
         <figcaption>Me everyday, when i code</figcaption>
       </figure>
     </header>
