--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="">Bio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Kontakt</a></li>
+        <li><a href="#">Bio</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Kontakt</a></li>
       </ul>
     </nav>
     <main id="">
