add the pseudo selector, and pseudo element comment

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
     <main id="">
       <section id="bio">
-        <h2>Biographie Maria Rios Navarro</h2>
+        <h2>Bio Maria Rios Navarro</h2>
         <p></p>
       </section>
 
