change html sliedeshow

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Maria Rios Navarro</title>
   </head>
   <body>
@@ -20,6 +20,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="#">Bio</a></li>
         <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Skills</a></li>
         <li><a href="#">Kontakt</a></li>
       </ul>
     </nav>
@@ -38,29 +39,23 @@
               <div class="mySlides fade">
                 <div class="numbertext">1 / 2</div>
                 <img src="img1.jpg" style="width: 100%" />
-                <div class="text">Caption Text</div>
               </div>
-
               <div class="mySlides fade">
                 <div class="numbertext">2 / 2</div>
                 <img src="img2.jpg" style="width: 100%" />
-                <div class="text">Caption Two</div>
               </div>
             </div>
           </li>
           <li>
-            <a href="" target="_blank">Codepen</a>
+            <a href="" target="_blank">Codesandox</a>
             <div class="slideshow-container">
               <div class="mySlides fade">
                 <div class="numbertext">1 / 2</div>
                 <img src="img1.jpg" style="width: 100%" />
-                <div class="text">Caption Text</div>
               </div>
-
               <div class="mySlides fade">
                 <div class="numbertext">2 / 2</div>
                 <img src="img2.jpg" style="width: 100%" />
-                <div class="text">Caption Two</div>
               </div>
             </div>
           </li>
@@ -86,5 +81,4 @@
       </ul>
     </footer>
   </body>
-
 </html>
