add video divs to skills sections

--- a/index.html
+++ b/index.html
@@ -64,10 +64,30 @@
       <section id="skills">
         <h3>Skills</h3>
         <ul>
-          <li>Html</li>
-          <li>Css</li>
-          <li>Javascript</li>
-          <li>React</li>
+          <li>
+            Html5
+            <div class="html__videos">
+              
+            </div>
+          </li>
+          <li>
+            CSS3
+            <div class="css__videos">
+
+            </div>
+          </li>
+          <li>
+            Javascript
+            <div class="js__videos">
+
+            </div>
+          </li>
+          <li>
+            Wordpress
+            <div class="wordpress__videos">
+
+            </div>
+          </li>
         </ul>
       </section>
     </main>
