--- a/index.html
+++ b/index.html
@@ -66,26 +66,37 @@
         <ul>
           <li>
             Html5
-            <div class="html__videos">
-              
+            <div class="html__videos videos-container">
+              <video src="" height="300px"></video>
+              <video src="" height="300px"></video>
             </div>
           </li>
           <li>
             CSS3
-            <div class="css__videos">
-
+            <div class="css__videos videos-container">
+              <video src="" height="300px"></video>
+              <video src="" height="300px"></video>
             </div>
           </li>
           <li>
             Javascript
-            <div class="js__videos">
-
+            <div class="js__videos videos-container">
+              <video src="" height="300px"></video>
+              <video src="" height="300px"></video>
             </div>
           </li>
           <li>
             Wordpress
-            <div class="wordpress__videos">
-
+            <div class="wordpress__videos videos-container">
+              <video src="" height="300px"></video>
+              <video src="" height="300px"></video>
+            </div>
+          </li>
+          <li>
+            Responsives Design
+            <div class="responsive__videos videos-container">
+              <video src="" height="300px"></video>
+              <video src="" height="300px"></video>
             </div>
           </li>
         </ul>
