--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <header id="header">
       <h1>Maria Rios Navarro Portfolio</h1>
       <figure>
-        <img src="/img/MariaCodingCracy.png" alt="Maria Code" height="300px" />
+        <img
+          src="/media/MariaCodingCracy.png"
+          alt="Maria Code"
+          height="300px"
+        />
         <figcaption>Me everyday, when i code</figcaption>
       </figure>
     </header>
@@ -67,36 +71,36 @@
           <li>
             Html5
             <div class="html__videos videos-container">
-              <video src="" height="300px"></video>
-              <video src="" height="300px"></video>
+              <video src="" height="200px"></video>
+              <video src="" height="200px"></video>
             </div>
           </li>
           <li>
             CSS3
             <div class="css__videos videos-container">
-              <video src="" height="300px"></video>
-              <video src="" height="300px"></video>
+              <video src="" height="200px"></video>
+              <video src="" height="200px"></video>
             </div>
           </li>
           <li>
             Javascript
             <div class="js__videos videos-container">
-              <video src="" height="300px"></video>
-              <video src="" height="300px"></video>
+              <video src="" height="200px"></video>
+              <video src="" height="200px"></video>
             </div>
           </li>
           <li>
             Wordpress
             <div class="wordpress__videos videos-container">
-              <video src="" height="300px"></video>
-              <video src="" height="300px"></video>
+              <video src="" height="200px"></video>
+              <video src="" height="200px"></video>
             </div>
           </li>
           <li>
             Responsives Design
             <div class="responsive__videos videos-container">
-              <video src="" height="300px"></video>
-              <video src="" height="300px"></video>
+              <video src="" height="200px"></video>
+              <video src="" height="200px"></video>
             </div>
           </li>
         </ul>
