add Profil image and link to tag

--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
       <h1>Maria Rios Navarro Portfolio</h1>
       <figure>
         <img
-          src="/media/MariaCodingCracy.png"
-          alt="Maria Code"
+          class="profil-image"
+          src="/media/img/profilMaria.JPG"
+          alt="Marias Foto"
           height="300px"
         />
-        <figcaption>Me everyday, when i code</figcaption>
       </figure>
     </header>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Bio</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Kontakt</a></li>
+        <li><a href="#bio">Bio</a></li>
+        <li><a href="#projects">Portfolio</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Kontakt</a></li>
       </ul>
     </nav>
     <main id="">
@@ -107,7 +107,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer id="contact" class="footer">
       <h3>Contact</h3>
       <ul>
         <li>Email</li>
