change html structuration.

--- a/index.html
+++ b/index.html
@@ -9,22 +9,17 @@
   </head>
   <body>
     <header id="header">
-      <h1>Maria Rios Navarro Portfolio</h1>
-      <figure>
-        <img
-          class="profil-image"
-          src="/media/img/profilMaria.JPG"
-          alt="Marias Foto"
-          height="300px"
-        />
-      </figure>
+      <div class="title-div">
+      <h1>Maria Rios Navarro</h1>
+      <h2>Webdeveloper</h2>
+    </div>
       <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#bio">Bio</a></li>
-          <li><a href="#projects">Portfolio</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#contact">Kontakt</a></li>
+        <ul class="nav-list">
+          <li><a href="index.html" class="nav-item">Home</a></li>
+          <li><a href="#bio" class="nav-item">Bio</a></li>
+          <li><a href="#projects" class="nav-item">Portfolio</a></li>
+          <li><a href="#skills" class="nav-item">Skills</a></li>
+          <li><a href="#contact" class="nav-item">Kontakt</a></li>
         </ul>
       </nav>
     </header>
@@ -32,6 +27,14 @@
     <main id="">
       <section id="bio">
         <h2>Bio Maria Rios Navarro</h2>
+        <figure>
+          <img
+            class="profil-image"
+            src="/media/img/profilMaria.JPG"
+            alt="Marias Foto"
+            height="200px"
+          />
+        </figure>
         <p></p>
       </section>
 
