--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <body>
     <header id="header">
       <div class="title-div">
-      <h1>Maria Rios Navarro</h1>
-      <h2>Webdeveloper</h2>
-    </div>
+        <h1 class="title">Maria Rios Navarro</h1>
+        <h2 class="subtitle">Webdeveloper</h2>
+        <img src="" alt="logo" />
+      </div>
       <nav>
         <ul class="nav-list">
           <li><a href="index.html" class="nav-item">Home</a></li>
