add some changes in header structure

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
   </head>
   <body>
     <header id="header">
-      <div class="title-div">
-        <h1 class="title">Maria Rios Navarro</h1>
-        <h2 class="subtitle">Webdeveloper</h2>
-        <img src="" alt="logo" />
+      <div class="title-and-logo-container">
+        <div class="titles-div">
+          <h1 class="title">Maria Rios Navarro</h1>
+          <h2 class="subtitle">Webdeveloper</h2>
+        </div>
+        <img
+          src="/media/videos/logoGif.gif"
+          class="logo"
+          alt="logo"
+          height="40px"
+        />
       </div>
       <nav>
         <ul class="nav-list">
