changes in logo

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
           <h1 class="title">Maria Rios Navarro</h1>
           <h2 class="subtitle">Webdeveloper</h2>
         </div>
-        <img
-          src="/media/videos/logoGif.gif"
+        <video
+          src="/media/videos/logoVideomp4.mp4"
           class="logo"
           alt="logo"
           height="40px"
-        />
+        ></video>
       </div>
       <nav>
         <ul class="nav-list">
