New style in heading

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
           <h1 class="title">Maria Rios Navarro</h1>
           <h2 class="subtitle">Webdeveloper</h2>
         </div>
-        <video
-          src="/media/videos/logoVideomp4.mp4"
+        <img
+          src="/media/img/logoGif.png"
           class="logo"
           alt="logo"
           height="40px"
-        ></video>
+        />
       </div>
       <nav>
         <ul class="nav-list">
