--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
           <h2 class="subtitle">Webdeveloper</h2>
         </div>
         <img
-          src="/media/img/logoGif.png"
+          src="/media/logo/redTaglogo.png"
           class="logo"
           alt="logo"
-          height="40px"
+          height="50px"
         />
       </div>
       <nav>
