Delete the first / after src and now i can see the image in other browser

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h2 class="subtitle">Webdeveloper</h2>
         </div>
         <img
-          src="/media/logo/redTaglogo.png"
+          src="media/logo/logoAnimationPNG.png"
           class="logo"
           alt="logo"
           height="50px"
@@ -38,7 +38,7 @@
         <figure>
           <img
             class="profil-image"
-            src="/media/img/profilMaria.JPG"
+            src="media/img/profilMaria.JPG"
             alt="Marias Foto"
             height="200px"
           />
