fix some design

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+< lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,12 +14,7 @@
           <h1 class="title">Maria Rios Navarro</h1>
           <h2 class="subtitle">Webdeveloper</h2>
         </div>
-        <img
-          src="media/logo/logoAnimationPNG.png"
-          class="logo"
-          alt="logo"
-          height="50px"
-        />
+        <img src="media/logo/logoAnimationPNG.png" class="logo" alt="logo" />
       </div>
       <nav>
         <ul class="nav-list">
