Add structure to Bio section

--- a/index.html
+++ b/index.html
@@ -28,17 +28,48 @@
     </header>
 
     <main id="">
-      <section id="bio">
-        <h2>Bio Maria Rios Navarro</h2>
-        <figure>
-          <img
-            class="profil-image"
-            src="media/img/profilMaria.JPG"
-            alt="Marias Foto"
-            height="200px"
-          />
-        </figure>
-        <p></p>
+      <section class="bio-secction" id="bio">
+        <article class="bio-header">
+            <h2 class="bio-header-title">Maria Rios Navarro</h2>
+            <figure class="image-container">
+              <img
+                class="profil-image"
+                src="media/img/profilMaria.JPG"
+                alt="Marias Foto"
+                height="200px"
+              />
+            </figure>
+            <p class="bio-description">I have a strong passion for web development and a deep motivation to pursue it as my career. I thrive on taking on new challenges and pushing myself to achieve greater heights. My creative spirit and self-motivation drive me to succeed in this field..</p>
+        </article>
+        <article class="bio-career">
+          <div class="bio-education">
+            <ul>
+              <li>
+
+              </li>
+              <li>
+
+              </li>
+            </ul>
+          </div>
+          <div class="bio-profesional">
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="bio-certification">
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+
+          </div>
+        </article>
       </section>
 
       <section id="projects">
