--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       </div>
       <nav>
         <ul class="nav-list">
-          <li><a href="index.html" class="nav-item">Home</a></li>
           <li><a href="#bio" class="nav-item">Bio</a></li>
           <li><a href="#projects" class="nav-item">Portfolio</a></li>
           <li><a href="#skills" class="nav-item">Skills</a></li>
@@ -32,12 +31,14 @@
         <article class="bio-header">
             <h2 class="bio-header-title">Maria Rios Navarro</h2>
             <figure class="image-container">
+              <a href="index.html">
               <img
                 class="profil-image"
                 src="media/img/profilMaria.JPG"
                 alt="Marias Foto"
                 height="200px"
               />
+            </a>
             </figure>
             <p class="bio-description">I have a strong passion for web development and a deep motivation to pursue it as my career. I thrive on taking on new challenges and pushing myself to achieve greater heights. My creative spirit and self-motivation drive me to succeed in this field..</p>
         </article>
