--- a/index.html
+++ b/index.html
@@ -30,16 +30,7 @@
       <section class="bio-secction" id="bio">
         <article class="bio-header">
             <h2 class="bio-header-title">Maria Rios Navarro</h2>
-            <figure class="image-container">
-              <a href="index.html">
-              <img
-                class="profil-image"
-                src="media/img/profilMaria.JPG"
-                alt="Marias Foto"
-                height="200px"
-              />
-            </a>
-            </figure>
+            <a href="index.html"><img class="profil-image"src="media/img/profilMaria.JPG" alt="Marias Foto" height="200px"/></a>
             <p class="bio-description">I have a strong passion for web development and a deep motivation to pursue it as my career. I thrive on taking on new challenges and pushing myself to achieve greater heights. My creative spirit and self-motivation drive me to succeed in this field..</p>
         </article>
         <article class="bio-career">
