Add in All the list items of bio container a H3 and a p

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h1 class="title">Maria Rios Navarro</h1>
           <h2 class="subtitle">Webdeveloper</h2>
         </div>
-        <img src="media/logo/logoAnimationPNG.png" class="logo" alt="logo" />
+        <a href="index.html"><img src="media/logo/logoAnimationPNG.png" class="logo" alt="logo" /></a>
       </div>
       <nav>
         <ul class="nav-list">
@@ -30,36 +30,63 @@
       <section class="bio-secction" id="bio">
         <article class="bio-header">
             <h2 class="bio-header-title">Maria Rios Navarro</h2>
-            <a href="index.html"><img class="profil-image"src="media/img/profilMaria.JPG" alt="Marias Foto" height="200px"/></a>
-            <p class="bio-description">I have a strong passion for web development and a deep motivation to pursue it as my career. I thrive on taking on new challenges and pushing myself to achieve greater heights. My creative spirit and self-motivation drive me to succeed in this field..</p>
-        </article>
+            <figure class="bio-image-container">
+              <img class="profil-image"src="media/img/profilMaria.JPG" alt="Marias Foto" height="200px"/>
+              <p class="bio-description">I have a strong passion for web development and a deep motivation to pursue it as my career. I thrive on taking on new challenges and pushing myself to achieve greater heights. My creative spirit and self-motivation drive me to succeed in this field..</p>
+            </figure>  
+          </article>
         <article class="bio-career">
           <div class="bio-education">
-            <ul>
+            <ul class="education-list">
               <li>
-
+                <h3></h3>
+                <p></p>
               </li>
               <li>
-
+                <h3></h3>
+                <p></p>
               </li>
             </ul>
           </div>
           <div class="bio-profesional">
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+            <ul class="profesional-list">
+              <li>
+                <h3></h3>
+                <p></p>
+              </li>
+              <li>
+                <h3></h3>
+                <p></p>
+              </li>
+              <li>
+                <h3></h3>
+                <p></p>
+              </li>
+              <li>
+                <h3></h3>
+                <p></p>
+              </li>
             </ul>
           </div>
           <div class="bio-certification">
-            <ul>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
+            <ul class="certification-list">
+              <li>
+                <h3></h3>
+                <p></p>
+              </li>
+              <li>
+                <h3></h3>
+                <p></p>
+              </li>
+              <li>
+                <h3></h3>
+                <p></p>
+              </li>
+              <li>
+                <h3></h3>
+                <p></p>
+              </li>
             </ul>
-
           </div>
         </article>
       </section>
