Add content to html stucture

--- a/index.html
+++ b/index.html
@@ -37,54 +37,54 @@
           </article>
         <article class="bio-career">
           <div class="bio-education">
-            <ul class="education-list">
-              <li>
-                <h3></h3>
-                <p></p>
+            <ul class="education-list" type="list">
+              <h2 class="heading-list">Education</h2>
+              <li class="list-container">
+                <h3 class="heading-list-item">Bootcamp Webdevelopment</h3>
+                <p class="description-list">„Neue Fische“ Germany. Capstone Project:""</p>
               </li>
-              <li>
-                <h3></h3>
-                <p></p>
+              <li class="list-container">
+                <h3 class="heading-list-item">Master's degree in Philosophie</h3>
+                <p class="description-list">2005 University of Valencia (Spain)</p>
               </li>
             </ul>
           </div>
           <div class="bio-profesional">
-            <ul class="profesional-list">
-              <li>
-                <h3></h3>
-                <p></p>
+            <ul class="profesional-list" type="list">
+              <h2 class="heading-list">Professional</h2>
+              <li class="list-container">
+                <h3 class="heading-list-item">2009-2023 Stand by Props (Film&TV)</h3>
+                <p class="description-list">Freelance</p>
               </li>
-              <li>
-                <h3></h3>
-                <p></p>
+              <li class="list-container">
+                <h3 class="heading-list-item">2006-2008 Help Desk Support</h3>
+                <p class="description-list">CRM services and HelpDesk Support (Spanish & German Team). Palm (Handhelds) & TomTom (Navigation system) in Mac and Windows.</p>
               </li>
-              <li>
-                <h3></h3>
-                <p></p>
-              </li>
-              <li>
-                <h3></h3>
-                <p></p>
+              <li class="list-container">
+                <h3 class="heading-list-item">2005-2006 Online Editor of Travel Guides (Internship)</h3>
+                <p class="description-list">Edition, Translation and Orthographic Revision of Travel Guides for travel books and websites.
+                  Education</p>
               </li>
             </ul>
           </div>
           <div class="bio-certification">
-            <ul class="certification-list">
+            <ul class="certification-list" type="list">
+              <h2 class="heading-list">Certification</h2>
               <li>
-                <h3></h3>
-                <p></p>
+                <h3 class="heading-list-item"></h3>
+                <p class="description-list"></p>
               </li>
               <li>
-                <h3></h3>
-                <p></p>
+                <h3 class="heading-list-item"></h3>
+                <p class="description-list"></p>
               </li>
               <li>
-                <h3></h3>
-                <p></p>
+                <h3 class="heading-list-item"></h3>
+                <p class="description-list"></p>
               </li>
               <li>
-                <h3></h3>
-                <p></p>
+                <h3 class="heading-list-item"></h3>
+                <p class="description-list"></p>
               </li>
             </ul>
           </div>
@@ -169,7 +169,8 @@
       <ul>
         <li>Email</li>
         <li>Telefon</li>
-        <li>Linkedin</li>
+        <li>
+        </li>
       </ul>
     </footer>
   </body>
