Add list item class

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
             <h2 class="bio-header-title">Maria Rios Navarro</h2>
             <figure class="bio-image-container">
               <img class="profil-image"src="media/img/profilMaria.JPG" alt="Marias Foto" height="200px"/>
-              <p class="bio-description">I have a strong passion for web development and a deep motivation to pursue it as my career. I thrive on taking on new challenges and pushing myself to achieve greater heights. My creative spirit and self-motivation drive me to succeed in this field..</p>
+              <p class="bio-description">I have a strong passion for software development and a deep motivation to pursue it as my career. I thrive on taking on new challenges and pushing myself to achieve greater heights. My creative spirit and self-motivation drive me to succeed in this field..</p>
             </figure>  
           </article>
         <article class="bio-career">
           <div class="bio-education">
             <ul class="education-list" type="list">
               <h2 class="heading-list">Education</h2>
-              <li class="list-container">
+              <li class="list-container list-item" >
                 <h3 class="heading-list-item">Bootcamp Webdevelopment</h3>
-                <p class="description-list">„Neue Fische“ Germany. Capstone Project:""</p>
+                <p class="description-list">„Neue Fische“ Germany. Capstone Project:</p>
               </li>
-              <li class="list-container">
+              <li class="list-container list-item" >
                 <h3 class="heading-list-item">Master's degree in Philosophie</h3>
                 <p class="description-list">2005 University of Valencia (Spain)</p>
               </li>
@@ -52,15 +52,15 @@
           <div class="bio-profesional">
             <ul class="profesional-list" type="list">
               <h2 class="heading-list">Professional</h2>
-              <li class="list-container">
+              <li class="list-container list-item" >
                 <h3 class="heading-list-item">2009-2023 Stand by Props (Film&TV)</h3>
                 <p class="description-list">Freelance</p>
               </li>
-              <li class="list-container">
+              <li class="list-container list-item" >
                 <h3 class="heading-list-item">2006-2008 Help Desk Support</h3>
                 <p class="description-list">CRM services and HelpDesk Support (Spanish & German Team). Palm (Handhelds) & TomTom (Navigation system) in Mac and Windows.</p>
               </li>
-              <li class="list-container">
+              <li class="list-container list-item" >
                 <h3 class="heading-list-item">2005-2006 Online Editor of Travel Guides (Internship)</h3>
                 <p class="description-list">Edition, Translation and Orthographic Revision of Travel Guides for travel books and websites.
                   Education</p>
@@ -70,22 +70,19 @@
           <div class="bio-certification">
             <ul class="certification-list" type="list">
               <h2 class="heading-list">Certification</h2>
-              <li>
-                <h3 class="heading-list-item"></h3>
+              <li class="list-item" >
+                <h3 class="heading-list-item"><a class="certification-link" href="https://www.freecodecamp.org/certification/Propscode/responsive-web-design">Free Code Camp</a></h3>
                 <p class="description-list"></p>
               </li>
-              <li>
-                <h3 class="heading-list-item"></h3>
+              <li class="list-item" >
+                <h3 class="heading-list-item"><a class="certification-link" href="https://www.linkedin.com/learning/certificates/d841b11ae3d1589d001dde121ac2f9c5892110f91fb5b552f68df992ffeefc69">Webtechniken lernen 1: HTML</a></h3>
                 <p class="description-list"></p>
               </li>
-              <li>
-                <h3 class="heading-list-item"></h3>
+              <li class="list-item" >
+                <h3 class="heading-list-item"><a class="certification-link" href="docs/MimoCertification.pdf">MIMO Certification of achievement HTML</a></h3>
                 <p class="description-list"></p>
               </li>
-              <li>
-                <h3 class="heading-list-item"></h3>
-                <p class="description-list"></p>
-              </li>
+
             </ul>
           </div>
         </article>
