--- a/index.html
+++ b/index.html
@@ -71,16 +71,18 @@
             <ul class="certification-list" type="list">
               <h2 class="heading-list">Certification</h2>
               <li class="list-item" >
-                <h3 class="heading-list-item"><a class="certification-link" href="https://www.freecodecamp.org/certification/Propscode/responsive-web-design">Free Code Camp</a></h3>
-                <p class="description-list"></p>
+                <h4 class="heading-list-item"><a class="certification-link" href="https://www.freecodecamp.org/certification/Propscode/responsive-web-design">Free Code Camp</a>
+                </h4>
+               
               </li>
               <li class="list-item" >
-                <h3 class="heading-list-item"><a class="certification-link" href="https://www.linkedin.com/learning/certificates/d841b11ae3d1589d001dde121ac2f9c5892110f91fb5b552f68df992ffeefc69">Webtechniken lernen 1: HTML</a></h3>
-                <p class="description-list"></p>
+                <h4 class="heading-list-item"><a class="certification-link" href="https://www.linkedin.com/learning/certificates/d841b11ae3d1589d001dde121ac2f9c5892110f91fb5b552f68df992ffeefc69">Webtechniken lernen 1: HTML</a>
+                </h4>
+          
               </li>
               <li class="list-item" >
-                <h3 class="heading-list-item"><a class="certification-link" href="docs/MimoCertification.pdf">MIMO Certification of achievement HTML</a></h3>
-                <p class="description-list"></p>
+                <h4 class="heading-list-item"><a class="certification-link" href="docs/MimoCertification.pdf">MIMO Certification of achievement HTML</a>
+                </h4> 
               </li>
 
             </ul>
