Add coments to HTML

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </header>
 
     <main id="">
+      <!-- Biographical Header with Foto and litle description -->
       <section class="bio-secction" id="bio">
         <article class="bio-header">
             <h2 class="bio-header-title">Maria Rios Navarro</h2>
@@ -35,9 +36,8 @@
               <p class="bio-description">I have a strong passion for software development and a deep motivation to pursue it as my career. I thrive on taking on new challenges and pushing myself to achieve greater heights. My creative spirit and self-motivation drive me to succeed in this field..</p>
             </figure>  
         </article>
-
+      <!-- Career in 3 sections: education, professional and certifications -->
         <article class="bio-career">
-          
           <div class="bio-education">
             <ul class="education-list" type="list">
               <h2 class="heading-list">Education</h2>
@@ -51,8 +51,8 @@
               </li>
             </ul>
           </div>
-          <div class="bio-profesional">
-            <ul class="profesional-list" type="list">
+          <div class="bio-professional">
+            <ul class="professional-list" type="list">
               <h2 class="heading-list">Professional</h2>
               <li class="list-container list-item" >
                 <h3 class="heading-list-item">2009-2023 Stand by Props (Film&TV)</h3>
