Fix name issues

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
     </header>
 
     <main id="">
-      <div class="bio_and_career_container">
+      <section class="bio_and_career_container" id="bio">
+          <div class="bio-section">
             <!-- Biographical Header with Foto and litle description -->
-        <section class="bio-secction" id="bio">
+        
             <article class="bio-header">
                   <h2 class="bio-header-title">Maria Rios Navarro</h2>
                   <figure class="bio-image-container">
@@ -88,8 +89,8 @@
                 </ul>
               </div>
             </article>
-        </section>
-      </div>
+          </div>
+      </section>
       <section id="projects">
         <h2>Projecte</h2>
         <!-- <ul>
