--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
         
             <article class="bio-header">
                   <h2 class="bio-header-title">Maria Rios Navarro</h2>
+                  <img class="logo-bio-top" src="media/logo/redRlogo.png" alt="logo" >
                   <figure class="bio-image-container">
                     <img class="profil-image"src="media/img/profilMaria.JPG" alt="Marias Foto" height="350px"/>
                     <p class="bio-description">I have a strong passion for software development and a deep motivation to pursue it as my career. I thrive on taking on new challenges and pushing myself to achieve greater heights. My creative spirit and self-motivation drive me to succeed in this field..</p>
-                  </figure>  
+                  </figure>
+                  <img class="bio-logo-bottom" src="media/logo/redSquareBrackets.png" alt="logo">  
             </article>
              <!-- Career in 3 sections: education, professional and certifications -->
             <article class="bio-career">
