Change the logos class names

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
             <article class="bio-header">
                   <h2 class="bio-header-title">Maria Rios Navarro</h2>
-                  <img class="logo-bio-top" src="media/logo/redRlogo.png" alt="logo" >
+                  <img class="bio-logo-top" src="media/logo/redRlogo.png" alt="logo" >
                   <figure class="bio-image-container">
                     <img class="profil-image"src="media/img/profilMaria.JPG" alt="Marias Foto" height="350px"/>
                     <p class="bio-description">I have a strong passion for software development and a deep motivation to pursue it as my career. I thrive on taking on new challenges and pushing myself to achieve greater heights. My creative spirit and self-motivation drive me to succeed in this field..</p>
